fix a invalid file path

--- a/sample/app.html
+++ b/sample/app.html
@@ -1,4 +1,4 @@
-<link rel="import" href="../fw/jsponsor.html">
+<link rel="import" href="../src/jsponsor.html">
 <link rel="import" href="components/package.html">
 
 <template id="my-app">
