implement a basic route feature
it's possible to change a page with local url
you can do this simply with jSponsor.router.location( ) API

--- a/src/components.html
+++ b/src/components.html
@@ -17,31 +17,52 @@
             shortcuts
          */
         var util = jSponsor.util,
-            ui = jSponsor.ui;
+            ui = jSponsor.ui,
+            router = jSponsor.router,
+            ownerDocument = document.currentScript.ownerDocument;
 
-        ui.registerViewComponent('jsponsor-app', document.currentScript.ownerDocument, function(element) {
-            var appName = util.getAttrValue(element.attributes, 'app');
-            console.log("------- " + appName + " is started! -------");
-        });
-
-        ui.registerViewComponent('route-view', document.currentScript.ownerDocument, function(element) {
-            var routeInfo = jSponsor.router.getRouteInfo('/');
-            if (!routeInfo) {
-                return;
+        ui.registerViewComponent({
+            viewName: 'jsponsor-app',
+            ownerDoc: ownerDocument,
+            onLoaded: function(element) {
+                var appName = util.getAttrValue(element.attributes, 'app');
+                console.log("------- " + appName + " is started! -------");
             }
-
-            var domView = document.createElement(routeInfo.view);
-            element.shadowRoot.appendChild(domView);
         });
 
-        ui.registerViewComponent('js-input', document.currentScript.ownerDocument, function(element) {
-            var modelName = getAttrValue(element.attributes, 'model');
+        ui.registerViewComponent({
+            viewName: 'route-view',
+            ownerDoc: ownerDocument,
+            onLoaded: function(element) {
+                router.setRouteViewElement(element);
+                element.setAttribute(router.ROUTE_URL_ATTR, router.getCurrentUrl());
+            },
+            onAttrChanged: function(element, attrName, newUrl) {
+                // routeView should renewal only when 'url' attribute is changed
+                if (attrName !== router.ROUTE_URL_ATTR) { return; }
 
-            var inputDom = element.shadowRoot.querySelector('input');
-            inputDom.addEventListener('input', function() {
-                console.log("js-input changed!!! value: " + inputDom.value);
+                var routeInfo = router.getRouteInfo(newUrl);
+                if (!routeInfo) { return; }
 
-            });
+                var domView = document.createElement(routeInfo.view);
+                // clear up the previous contents
+                element.shadowRoot.innerHTML = "";
+                element.shadowRoot.appendChild(domView);
+            }
+        });
+
+        ui.registerViewComponent({
+            viewName: 'js-input',
+            ownerDoc: ownerDocument,
+            onLoaded: function(element) {
+                var modelName = getAttrValue(element.attributes, 'model');
+
+                var inputDom = element.shadowRoot.querySelector('input');
+                inputDom.addEventListener('input', function() {
+                    console.log("js-input changed!!! value: " + inputDom.value);
+
+                });
+            }
         });
     })();
 
