--- a/sample/app.html
+++ b/sample/app.html
@@ -3,8 +3,8 @@
 
 <template id="my-app">
     <jsponsor-app app="testApp">
-        <div id="placeholder"><span>Test App</span></div>
-        <my-table><b>OK I'm content in table</b></my-table>
+        <div id="placeholder"><span>jSponsor Sample App</span></div>
+        <my-table><b>This is placeholder</b></my-table>
         <route-view></route-view>
     </jsponsor-app>
 </template>
@@ -21,10 +21,13 @@
             url: '/',
             controller: 'myController',
             view: 'main-page'
+        }, {
+            url: '/secondPage',
+            controller: 'secondCtrl',
+            view: 'second-page'
         }]);
 
         app.view('my-app', {
-            // ownerDocument를 생략할 수 있는 방법이 없을까?
             document: document.currentScript.ownerDocument
         });
     })();
