add http connector feature
- create a connector module
- implement a basic http connetor

--- a/src/jsponsor.html
+++ b/src/jsponsor.html
@@ -1,6 +1,7 @@
 <script type="text/javascript" src="base.js"></script>
 <script type="text/javascript" src="util.js"></script>
 <script type="text/javascript" src="router.js"></script>
+<script type="text/javascript" src="connector.js"></script>
 <script type="text/javascript" src="injector.js"></script>
 <script type="text/javascript" src="ui.js"></script>
 <script type="text/javascript" src="package.js"></script>
