add temporary file system feature
this is just prototype code

--- a/src/jsponsor.html
+++ b/src/jsponsor.html
@@ -1,5 +1,6 @@
 <script type="text/javascript" src="base.js"></script>
 <script type="text/javascript" src="util.js"></script>
+<script type="text/javascript" src="fileSystem.js"></script>
 <script type="text/javascript" src="router.js"></script>
 <script type="text/javascript" src="connector.js"></script>
 <script type="text/javascript" src="injector.js"></script>
