--- a/src/jsponsor.html
+++ b/src/jsponsor.html
@@ -3,6 +3,7 @@
 <script type="text/javascript" src="log.js"></script>
 <script type="text/javascript" src="exception.js"></script>
 <script type="text/javascript" src="fileSystem.js"></script>
+<script type="text/javascript" src="worker.js"></script>
 <script type="text/javascript" src="router.js"></script>
 <script type="text/javascript" src="connector.js"></script>
 <script type="text/javascript" src="injector.js"></script>
